--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="movie_container">
         <label>Please select your movie</label>
         <select id="movie">
-            <option value="50">Jujutsu Kaisen ($50)</option>
-            <option value="30">Solo Leveling ($30)</option>
-            <option value="50">Dragon Ball Super ($50)</option>
-            <option value="25">Death Note ($25)</option>
-            <option value="35">Demon Slayer ($35)</option>
+            <option value="50">Jujutsu Kaisen</option>
+            <option value="30">Solo Leveling</option>
+            <option value="50">Dragon Ball Super</option>
+            <option value="25">Death Note</option>
+            <option value="35">Demon Slayer</option>
         </select>
     </div>
 
